# external/swagger/docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api/v1
 definitions:
+  dtos.LoginRequestModel:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   dtos.CreateHouseModel:
     properties:
       maxMemberCount:
@@ -16,9 +23,9 @@ definitions:
         allOf:
           - $ref: "#/definitions/entities.HouseType"
         enum:
-          - StudentHouse
-          - SharedHouse
-          - DormRoom
+          - 1
+          - 2
+          - 3
     required:
       - maxMemberCount
       - name
@@ -110,10 +117,10 @@ definitions:
     type: object
   entities.HouseType:
     enum:
-      - StudentHouse
-      - SharedHouse
-      - DormRoom
-    type: string
+      - 1
+      - 2
+      - 3
+    type: integer
     x-enum-varnames:
       - StudentHouse
       - SharedHouse
@@ -162,22 +169,18 @@ info:
   title: HouseFlow API
   version: "1.0"
 paths:
-  /auth/login/{email}/{password}:
-    get:
+  /auth/login:
+    post:
       consumes:
         - application/json
       description: Login with email and password to receive JWT token
       parameters:
-        - description: User email address
-          in: path
-          name: email
+        - description: Login credentials
+          in: body
+          name: login
           required: true
-          type: string
-        - description: User password
-          in: path
-          name: password
-          required: true
-          type: string
+          schema:
+            $ref: "#/definitions/dtos.LoginRequestModel"
       produces:
         - application/json
       responses:
